Added Security for authorization and authentication